docs/tests/parser/control_flow/invalid/DoWhileMissingCloseParen.b
fn void test() {
    do {
    } while (true;
}
